--- a/src/js/comp/List/List.css
+++ b/src/js/comp/List/List.css
@@ -46,7 +46,7 @@
 	display: inline-block;
 	background-color: #a89e9c;
 	background-image:url(../../../img/choose.png);
-	background-size: 100% 100%;	
+	background-size: 100% 105%;	
 }
 .top_title .change{
 	cursor: pointer;
@@ -77,7 +77,9 @@
 	font-weight: 300;
 	border-bottom: 1px solid #f1e8db;
 }
-
+.itemArtcle a{
+	color: #f1e8db;
+}
 .itemArtcle:first-of-type{
 	border-top: 1px solid #f1e8db;
 }
@@ -133,7 +135,7 @@
 	height: 2rem;
 	line-height: 2rem;
 	font-size: 1rem;
-	font-weight: 700;
+	font-weight: 300;
 }
 .card .artcle .content{
 	text-indent:1rem;
